run pmd static analyzer agaisnt the test suite